force-app/main/default/objects/Attendee__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Successful?</label>
    <type>Checkbox</type>
</CustomField>